# bartender-boys

./: .gitignore  README.md  package-lock.json  package.json  run-all.ps1
apps/Pi5/: .env.example  README.md  main.py  pyproject.toml
apps/Pi5/pi_app/: __init__.py  config.py  logger.py  models.py
apps/backend/: .env.example  Makefile  README.md  main.py  pyproject.toml  run-backend.ps1  settings.py  test_openai_connection.py  test_openai_quick.py  test_websocket.py
apps/backend/chat/: models.py  routes.py  routes_chats.py  routes_conversations.py  routes_respond.py  tools.py  utils.py
apps/backend/config/: pi_mapping.json
apps/backend/data/: __init__.py  drinks.py  pump_config.py  users.py
apps/backend/drinks/: __init__.py  models.py  routes.py
apps/backend/id_scanning/: models.py  routes.py  utils.py
apps/backend/iot/: __init__.py  models.py  routes.py  utils.py
apps/backend/realtime/: OPENAI_README.md  __init__.py  models.py  openai_client.html  realtime_manager.py  routes.py
apps/backend/services/: db.py  dispenser.py  gridfs_storage.py  openai.py  websocket_service.py
apps/backend/tests/: test_clean_extracted_data.py  test_decode_base64_data_url.py  test_decode_base64_invalid.py  test_decode_base64_success.py  test_id_scanning_utils.py  test_parse_date_invalid.py  test_parse_date_iso.py  test_parse_date_slash.py  test_validate_image_jpeg.py  test_validate_image_png.py  test_validate_image_random.py  test_websocket_connection.py
apps/backend/webrtc/: OPENAI_README.md  README.md  REAL_IMPLEMENTATION_README.md  client_example.html  models.py  openai_client.html  openai_integration.py  routes.py  (+1 more)
apps/firmware/: Makefile  fix-led-permissions.sh  main.py  pyproject.toml  routes.py  start-with-ngrok.sh  stop-processes.sh
(+110 files in other folders)
