[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pymongo>=4.15.1",
    "motor>=3.6.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "aiortc>=1.6.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["id_scanning*", "services*", "realtime*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
